--- a/网页设计/第4次上机/1古诗文网站-css.html
+++ b/网页设计/第4次上机/1古诗文网站-css.html
@@ -1,7 +1,7 @@
 <HTML>
   <HEAD>
   <title>古诗词五首</title>
-    <style>
+    <style type="text/css">
 	t{
 	color:red;
 	font-size:32px;
@@ -18,7 +18,7 @@
 	font-size:24px;
 	}
 	.song{ font-family:"宋体";}
-	.hei{font-familt:"黑体";}
+	.hei{font-family:"黑体";}
 	</style>
   </HEAD>  
   
@@ -39,7 +39,7 @@
 <pa>二月十五夜，与赵德麟小酌聚星堂春庭月午，摇荡香醪光欲舞。<br>步转回廊，半落梅花婉婉香。<br>
 轻烟薄雾，怎是少年行乐处。<br>不似秋光，只与离人照断肠。</pa><br><br>
 
-<t>菩萨蛮·三月晦送春有集坐中偶书</t><br>
+<t>菩萨蛮·春来春去催人老</t><br>
 <w>【作者】张元干</w><br>
 <pa>春来春去催人老。<br>老夫争肯输年少。<br>醉后少年狂。<br>白髭殊未妨。<br>
 插花还起舞。<br>管领风光处。<br>把酒共留春。<br>莫教花笑人。</pa><br><br>
