--- a/网页设计/第4次上机/2古诗文网站-css -任务2.html
+++ b/网页设计/第4次上机/2古诗文网站-css -任务2.html
@@ -1,6 +1,6 @@
 <HTML>
   <HEAD>
-  <title>古诗词五首</title>
+  <title>古诗词六首</title>
     <style>
 	t{
 	color:black;
@@ -38,7 +38,7 @@
 <pa class=face>二月十五夜，与赵德麟小酌聚星堂春庭月午，摇荡香醪光欲舞。<br>步转回廊，半落梅花婉婉香。<br>
 轻烟薄雾，怎是少年行乐处。<br>不似秋光，只与离人照断肠。</pa><br><br>
 
-<t class=face>菩萨蛮·三月晦送春有集坐中偶书</t><br>
+<t class=face>菩萨蛮·春来春去催人老</t><br>
 <w class=face>【作者】张元干</w><br>
 <pa class=face>春来春去催人老。<br>老夫争肯输年少。<br>醉后少年狂。<br>白髭殊未妨。<br>
 插花还起舞。<br>管领风光处。<br>把酒共留春。<br>莫教花笑人。</pa><br><br>
