--- a/网页设计/第4次上机/2古诗文网站-html - 任务2.html
+++ b/网页设计/第4次上机/2古诗文网站-html - 任务2.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>古诗词五首</title>
+<title>古诗词六首</title>
 </head>  
 
 
@@ -24,7 +24,7 @@
 <font style="font-size:24px" color="blue" face="宋体">二月十五夜，与赵德麟小酌聚星堂春庭月午，摇荡香醪光欲舞。<br>步转回廊，半落梅花婉婉香。<br>
 轻烟薄雾，怎是少年行乐处。<br>不似秋光，只与离人照断肠。</font><br><br>
 
-<font style="font-size:32px" color="black" face="宋体">菩萨蛮·三月晦送春有集坐中偶书</font><br>
+<font style="font-size:32px" color="black" face="宋体">菩萨蛮·春来春去催人老</font><br>
 <font style="font-size:16px" color="green" face="宋体">【作者】张元干</font><br>
 <font style="font-size:24px" color="blue" face="宋体">春来春去催人老。<br>老夫争肯输年少。<br>醉后少年狂。<br>白髭殊未妨。<br>
 插花还起舞。<br>管领风光处。<br>把酒共留春。<br>莫教花笑人。</font><br><br>
