--- a/网页设计/第4次上机/3任务三.html
+++ b/网页设计/第4次上机/3任务三.html
@@ -1,6 +1,6 @@
 <HTML>
   <HEAD>
-  <title>古诗词</title>
+  <title>酒泉子日映纱窗</title>
     <style>
 	.title{
 		text-align:center;
@@ -13,7 +13,7 @@
 		text-align:center;
 		font-size:10px;
 		color:blue;
-		font-weight:bold;
+		font-family:"黑体";
 	}
 
 	.time{
@@ -27,7 +27,7 @@
 		text-align:center;
 		font-size:20px;
 		color:purple;
-		font-weight:bold;
+		font-family:"黑体";
 	}
 	</style>
   </HEAD>  
